# DIHC_FeatureManager

./: .gitignore  Main.ipynb  Main.py  README.md  eeg_sampEn_profile_data_python.csv  hypnogram_signal_data.csv  pyproject.toml  pyproject.toml 
DIHC_FeatureManager/: DIHC_DataSegmenter.py  DIHC_EntropyProfile.py  DIHC_FeatureDetails.py  DIHC_FeatureExtractor.py  DIHC_FeatureExtractor_Helper.py  DIHC_FeatureManager.py  __init__.py  patch_entropy_profile.py
DIHC_FeatureManager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: Main.ipynb  Raw-signal-Sz.xlsx  eeg_all_features_matlab.csv  eeg_all_features_python.csv  hyp_all_features_python.csv
examples/original_eeg_demo/: Feature_Comparison.xlsx  eeg_all_features_python_1.csv  eeg_sampEn_profile_data_matlab.csv  eeg_sampEn_profile_data_python_1.csv
